--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
         <div class="resume">
 <span class="resume-btn">
   <ion-icon name="download"></ion-icon>
-  <span><a href="assets/images/Niranjan_Desai_9766943979.pdf" download>Download Resume</a></span>
+  <span><a href="assets/images/Niranjan_Desai _9766943979.pdf" download>Download Resume</a></span>
 </span>
 
 
