--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://linkedin.com/in/niranjan-undefined-3b6a832b1" class="social-link">
+            <a href="https://www.linkedin.com/in/niranjan-desai-3b6a832b1" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
